src/test/deca/context/invalid/SansObjet/DeclVar-And-float-int-int.deca
// Description:
//    Declaration of a float variable using && operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    int y = 10; 
    float z = 5 && 10; 
}
